crates/wdl-analysis/tests/validation/wdl-1-4-symbolic-import-with-flag/source.errors
error: symbolic imports are only resolvable from within a module; run `sprocket module init` to create one
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:3:8
  │
3 │ import openwdl/csvkit
  │        ^^^^^^^^^^^^^^

error: symbolic imports are only resolvable from within a module; run `sprocket module init` to create one
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:4:15
  │
4 │ import * from openwdl/csvkit
  │               ^^^^^^^^^^^^^^

error: symbolic imports are only resolvable from within a module; run `sprocket module init` to create one
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:5:22
  │
5 │ import { sort } from openwdl/csvkit
  │                      ^^^^^^^^^^^^^^

